--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "deploy": "gh-pages -d dist"
   }
 }
